src/network/access/qnetworkreplywasmimpl_p.h
@@ -135,6 +135,7 @@ public:
 
     QIODevice *outgoingData;
     QSharedPointer<QRingBuffer> outgoingDataBuffer;
+    QByteArray requestData;
 
     void doAbort() const;
 
